Fixed font scaling on IE 11

--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,16 @@ html, body {
     height: 100%;
 	background: linear-gradient(90deg, #1f2932, #667d8e);
 	font-family: 'Roboto-Regular';
-    font-size: calc(9px + 1vmax);
+    /* Allow for font scaling (also supported in IE) */
+    font-size: calc(1vw + 1vh - 1vmin + 9px);
 }
 
 #main {
     background-image: url(../svg/pattern-repeat.svg);
-	background-repeat: repeat-y;
-	background-size: contain;
+    background-repeat: repeat-y;
+    background-size: contain;
     padding: 8vw;
+    /* Fix jittery scroll in chrome */
     -webkit-transform: translate3d(0,0,0);
 }
 
